kubernetes/statefulset/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  selector:
    matchLabels:
      app: minio # has to match .spec.template.metadata.labels
  serviceName: "minio"
  replicas: 2 # by default is 1
  template:
    metadata:
      labels:
        app: minio # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: minio
        image: minio/minio
        args: [ "server", "/data/data"]
        ports:
        - containerPort: 9000
          name: endpoint
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      # storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
