kubernetes/statefulset/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  ports:
  - port: 9000
    name: service
  clusterIP: None
  selector:
    app: minio
