kubernetes/statefulset/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
spec:
  backend:
    serviceName: minio
    servicePort: 9000
